// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar renders a coloured calendar 1`] = `
<blaze-calendar
  class="hydrated"
  date="1982, January 14"
  type="info"
>
  
  <div
    class="c-calendar"
  >
    <button
      class="c-calendar__control c-calendar__control--prev-year"
    >
      ‹
    </button>
    <div
      class="c-calendar__header c-calendar__header--year"
    >
      1982
    </div>
    <button
      class="c-calendar__control c-calendar__control--next-year"
    >
      ›
    </button>
    <button
      class="c-calendar__control c-calendar__control--prev-month"
    >
      ‹
    </button>
    <div
      class="c-calendar__header c-calendar__header--month"
    >
      January
    </div>
    <button
      class="c-calendar__control c-calendar__control--next-month"
    >
      ›
    </button>
    <div
      class="c-calendar__day"
    >
      Su
    </div>
    <div
      class="c-calendar__day"
    >
      Mo
    </div>
    <div
      class="c-calendar__day"
    >
      Tu
    </div>
    <div
      class="c-calendar__day"
    >
      We
    </div>
    <div
      class="c-calendar__day"
    >
      Th
    </div>
    <div
      class="c-calendar__day"
    >
      Fr
    </div>
    <div
      class="c-calendar__day"
    >
      Sa
    </div>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      27
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      28
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      29
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      30
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      31
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      1
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      2
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      3
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      4
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      5
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      6
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      7
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      8
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      9
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      10
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      11
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      12
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      13
    </button>
    <button
      aria-selected="1"
      class="c-calendar__date c-calendar__date--in-month c-button c-button--info"
    >
      14
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      15
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      16
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      17
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      18
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      19
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      20
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      21
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      22
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      23
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      24
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      25
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      26
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      27
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      28
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      29
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      30
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      31
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      1
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      2
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      3
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      4
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      5
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      6
    </button>
    <div
      class="c-calendar__footer"
    >
      <button
        class="c-calendar__today c-button c-button--block c-button--info"
      >
        Today
      </button>
    </div>
  </div>
</blaze-calendar>
`;

exports[`Calendar renders a default calendar 1`] = `
<blaze-calendar
  class="hydrated"
  date="1982, January 14"
>
  
  <div
    class="c-calendar"
  >
    <button
      class="c-calendar__control c-calendar__control--prev-year"
    >
      ‹
    </button>
    <div
      class="c-calendar__header c-calendar__header--year"
    >
      1982
    </div>
    <button
      class="c-calendar__control c-calendar__control--next-year"
    >
      ›
    </button>
    <button
      class="c-calendar__control c-calendar__control--prev-month"
    >
      ‹
    </button>
    <div
      class="c-calendar__header c-calendar__header--month"
    >
      January
    </div>
    <button
      class="c-calendar__control c-calendar__control--next-month"
    >
      ›
    </button>
    <div
      class="c-calendar__day"
    >
      Su
    </div>
    <div
      class="c-calendar__day"
    >
      Mo
    </div>
    <div
      class="c-calendar__day"
    >
      Tu
    </div>
    <div
      class="c-calendar__day"
    >
      We
    </div>
    <div
      class="c-calendar__day"
    >
      Th
    </div>
    <div
      class="c-calendar__day"
    >
      Fr
    </div>
    <div
      class="c-calendar__day"
    >
      Sa
    </div>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      27
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      28
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      29
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      30
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      31
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      1
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      2
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      3
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      4
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      5
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      6
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      7
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      8
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      9
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      10
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      11
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      12
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      13
    </button>
    <button
      aria-selected="1"
      class="c-calendar__date c-calendar__date--in-month c-button c-button--brand"
    >
      14
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      15
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      16
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      17
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      18
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      19
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      20
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      21
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      22
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      23
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      24
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      25
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      26
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      27
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      28
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      29
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      30
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date c-calendar__date--in-month"
    >
      31
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      1
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      2
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      3
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      4
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      5
    </button>
    <button
      aria-selected="0"
      class="c-calendar__date"
    >
      6
    </button>
    <div
      class="c-calendar__footer"
    >
      <button
        class="c-calendar__today c-button c-button--block c-button--brand"
      >
        Today
      </button>
    </div>
  </div>
</blaze-calendar>
`;
